[package]
name = "prom-tls-expiration-exporter"
version = "0.1.0"
authors = ["Patrick Stricker <git@pa2.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
env_logger = "0.7.1"
futures = "0.1.25"
log = "0.4.8"
pico-args = "0.3.4"
prometheus_exporter_base = "0.30.3"
serde = { version = "1.0", features = ["derive"] }
#ssl-expiration = "0.1.2"
ssl-expiration2 = "0.2.2"
tokio = { version = "1.18", features = ["full"] }
